fix: miglioria classe no-wrap per desktop

--- a/assets/src/css/style.css
+++ b/assets/src/css/style.css
@@ -1774,13 +1774,15 @@ body:not(.sidebar-collapse) .sidebar .nav-treeview .nav-treeview .nav-link {
 }
 
 
-
 @media (min-width: 1140px) {
     .modal-lg {
         max-width: 60vw;
     }
-}
 
+    .text-nowrap {
+        white-space: normal !important;
+    }
+}
 
 
 /*
